# ludum-dare-46

./: .gitignore  Cargo.toml  LICENSE
assets/: fire_animation.ron  game_background.ron  game_background_shadows.ron
config/: display.ron
resources/: static_animations.ron
src/: animations.rs  audio.rs  constants.rs  game.rs  main.rs  resources.rs  utils.rs
src/assets/: mod.rs  sounds.rs  story.rs  text.rs
src/states/: game.rs  loading.rs  menu.rs  mod.rs
src/systems/: interaction.rs  mod.rs  sound.rs
