[package]
name = "ludum-dare-46"
version = "0.1.0"
authors = ["sigod <sigod.mail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = "0.11.5"
ggez = "0.5"
log = "0.4.8"
ron = "0.5.1"
serde = "1.0.106"

[profile.dev.package."*"]
opt-level = 2
