[package]
name = "ludum-dare-46"
version = "0.2.0"
authors = ["sigod <sigod.mail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.17", features = ["mint"]}
flexi_logger = "0.11.5"
ggez = "0.5"
log = "0.4.8"
rand = "0.7.3"
ron = "0.5.1"
serde = "1.0.106"

[profile.dev.package."*"]
opt-level = 2
